# tinybpe

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README_en.md  README_zh.md  RELEASE_NOTES_v1.1.0.md  SECURITY.md  build_setup.py  exam.py  gpt4.vocab  pyproject.toml  requirements_dev.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  python-package.yml  release.yml  wheels.yml
benchmarks/: README.md  bench_decode.py  bench_encode.py  bench_train.py
docs/: algorithm.md  api.md  file-formats.md
examples/: basic_example.py  chinese.txt  cl100k_base.vocab  cl100k_tokenizer.py  convert_tiktoken.py  regex.tinybpe  regex.vocab  regex_encode_decode.py  regex_tokenizer.py  regex_train.py  regex_trainer.py  simple-chinese.vocab  simple-continue.tinymodel  simple.bpe  simple.tinymodel  simple.vocab  simple_c.tinybpe  simple_c_train.py  simple_chinese_tokenizer.py  simple_chinese_trainer.py  simple_continue_training.py  simple_encode_decode.py  simple_tokenizer.py  simple_train.py  simple_trainer.py  stream_decode.py
microbpe_ext/: rbtree.h
models/: README.md  cl100k_base.tbm  deepseek-llm.tbm  deepseek-v4.tbm  minicpm.tbm  o200k_base.tbm  p50k_base.tbm  phi2.tbm  qwen25.tbm
scripts/: README.md  convert_gpt4.py  convert_hf_tokenizer.py  convert_llama.py  convert_minicpm.py  convert_tiktoken.py  tools.py  tools_tiktoken.py
scripts/models/: README.md
scripts/models/llama/: special_tokens_map.json  tokenizer_config.json
src/: _tree_core.c  _tree_core.h  bpe_common.c  bpe_common.h  bpe_module.c  bpe_tokenizer.c  bpe_tokenizer.h  bpe_trainer.c  bpe_trainer.h
tests/: cl100k_base.tinymodel  conftest.py  regex.tinymodel  sample.txt  simple-chinese.tbm  simple-chinese.tinymodel  simple.tbm  simple.tinymodel  simple.vocab  test_bpe.py  test_cpy_bpe.py  test_edge_cases.py  test_fuzz.py  test_hf_models.py  test_minicpm.py  test_model_registry.py  test_models.py  test_scripts.py  test_streaming_decode.py  test_tinybpe.py  test_tokenizer.py  test_trainer.py  the-old-man-and-the-sea.txt
tinybpe/: __init__.py  _abc.py  _model_io.py  _registry.py  _tiktoken.py  _utils.py  _version.py  bpe.pyi  core.py  simple.py  tokenizer.py  trainer.py
tinybpe/models/: __init__.py  _core.py  _tokenizer.py  cl100k_base.remaps  cl100k_base.tinybpe  gpt4.py  minicpm5.tbm  models.json  qwen35.tbm
