[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinybpe"
authors = [{ name = "E.T. Romani", email = "myneluca@gmail.com" }]
description = "An ultra-fast, lightweight and clean CPython implementation of the Byte Pair Encoding (BPE) algorithm for language model tokenization."
dependencies = ["regex"]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
keywords = ["BPE", "Byte Pair Encoding", "LLM", "Tokenizer", "CPython"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/neluca/tinybpe"
Repository = "https://github.com/neluca/tinybpe"
Issues = "https://github.com/neluca/tinybpe/issues"
Documentation = "https://github.com/neluca/tinybpe#readme"

[tool.setuptools]
packages = ["tinybpe"]

[tool.setuptools.dynamic]
version = { attr = "tinybpe._version.__version__" }
