[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinybpe"
authors = [{ name = "Romani Isa", email = "myneluca@gmail.com" }]
description = "An ultra-fast, lightweight BPE tokenizer and trainer with a pure-C core."
dependencies = ["regex>=2022.1.18"]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
keywords = ["BPE", "Byte Pair Encoding", "LLM", "Tokenizer", "CPython"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-regex",
]
tiktoken = ["tiktoken"]
hf = ["huggingface_hub"]
all = ["tinybpe[tiktoken,hf,dev]"]

[project.urls]
Homepage = "https://github.com/neluca/tinybpe"
Repository = "https://github.com/neluca/tinybpe"
Issues = "https://github.com/neluca/tinybpe/issues"
Documentation = "https://github.com/neluca/tinybpe#readme"

[tool.setuptools]
packages = ["tinybpe"]

[tool.setuptools.package-data]
tinybpe = ["models/*.tbm", "models/*.json"]

[tool.setuptools.dynamic]
version = { attr = "tinybpe._version.__version__" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "TCH", "PT"]

[tool.ruff.lint.isort]
known-first-party = ["tinybpe"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF001", "RUF012", "PT006"]
"scripts/*" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "-ra"]

[tool.coverage.run]
source = ["tinybpe"]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
